Regression: Weston build fails (incorrect include order)
Build setup:
- Ubuntu 18.04 (gcc 7.4)
- Meson v0.49 (from Ubuntu 19.04 due to #293 (closed))
- Git head of Weston and it's main deps (Mesa etc)
Weston build broke within couple of last days:
$ meson -Dimage-jpeg=false -Dimage-webp=false -Dsimple-dmabuf-drm=auto -Dxwayland-path=/opt/install/bin/Xwayland -Dpipewire=false -Dbackend-drm-screencast-vaapi=false -Dbackend-rdp=false -Dremoting=false --buildtype=debugoptimized ../source/weston
...
In file included from libweston/renderer-gl/gl-renderer.c:48:0:
libweston/renderer-gl/gl-renderer-internal.h:69:2: error: unknown type name 'PFNEGLBINDWAYLANDDISPLAYWL'
PFNEGLBINDWAYLANDDISPLAYWL bind_display;
^~~~~~~~~~~~~~~~~~~~~~~~~~
libweston/renderer-gl/gl-renderer-internal.h:70:2: error: unknown type name 'PFNEGLUNBINDWAYLANDDISPLAYWL'
PFNEGLUNBINDWAYLANDDISPLAYWL unbind_display;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
libweston/renderer-gl/gl-renderer-internal.h:71:2: error: unknown type name 'PFNEGLQUERYWAYLANDBUFFERWL'
PFNEGLQUERYWAYLANDBUFFERWL query_buffer;
^~~~~~~~~~~~~~~~~~~~~~~~~~
libweston/renderer-gl/gl-renderer.c: In function 'gl_renderer_attach_egl':
libweston/renderer-gl/gl-renderer.c:1825:2: error: called object is not a function or function pointer
gr->query_buffer(gr->egl_display, buffer->legacy_buffer,
^~
libweston/renderer-gl/gl-renderer.c:1827:2: error: called object is not a function or function pointer
gr->query_buffer(gr->egl_display, buffer->legacy_buffer,
^~
libweston/renderer-gl/gl-renderer.c:1829:2: error: called object is not a function or function pointer
gr->query_buffer(gr->egl_display, buffer->legacy_buffer,
^~
libweston/renderer-gl/gl-renderer.c: In function 'gl_renderer_attach':
libweston/renderer-gl/gl-renderer.c:2505:4: error: called object is not a function or function pointer
gr->query_buffer(gr->egl_display, (void *)buffer->resource,
^~
libweston/renderer-gl/gl-renderer.c: In function 'gl_renderer_destroy':
libweston/renderer-gl/gl-renderer.c:3244:3: error: called object is not a function or function pointer
gr->unbind_display(gr->egl_display, ec->wl_display);
^~
Attached patch fixes it: 0001-Fix-include-order-to-unbreak-build.patch
I think you need to increase you build testing.