Add include for missing symbols

Fixes: https://gitlab.freedesktop.org/wayland/weston/issues/303